[project]
name = "mittab"
version = "2.0.0"
description = "A web application to tabulate and run APDA tournaments"
requires-python = ">=3.10.16,<3.11"
dependencies = [
  "boto3==1.40.42",
  "charset-normalizer==3.4.3",
  "django==4.2.30",
  "django-bootstrap4==3.0.0",
  "django-silk==5.2.0",
  "django-webpack-loader==3.2.1",
  "exceptiongroup==1.3.0",
  "gevent==24.10.3",
  "gunicorn==23.0.0",
  "mysqlclient==1.4.4",
  "pillow==12.2.0",
  "pymemcache==4.0.0",
  "python-dotenv==1.2.2",
  "pyyaml==6.0.3",
  "requests==2.33.0",
  "sentry-sdk[django]==2.39.0",
  "six==1.17.0",
  "urllib3==2.6.3",
  "wrapt==1.17.3",
  "xlrd==0.9.4",
  "xlwt==1.3.0",
]

[dependency-groups]
dev = [
  "coverage==7.10.7",
  "mock==1.0.1",
  "nplusone",
  "pylint==3.3.9",
  "pylint-django==2.6.1",
  "pytest==9.0.3",
  "pytest-circleci-parallelized==0.0.4",
  "pytest-cov==4.1.0",
  "pytest-django==4.8.0",
  "selenium==4.15.2",
  "splinter==0.21.0",
]
docs = [
  "jinja2==3.1.6",
  "myst-parser==2.0.0",
  "shibuya==2024.8.30",
  "sphinx==7.2.6",
]

[tool.uv]
package = false
